<resources>
    <string name="app_name">SnapInstantLoanFinder</string>


    <string name="dm_sans_bold">font/dm_sans_bold.ttf</string>
    <string name="dm_sans_bold_book">font/dm_sans_bold.ttf</string>
    <string name="dm_sans_36pt_500">font/dm_sans_three_six_pt_medium.ttf</string>
    <string name="dm_sans_36pt_700">font/dm_sans_three_six_pt_bold.ttf</string>
    <string name="dm_sans_36pt_600">font/dm_sans_three_six_semi_bold.ttf</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don’t have an account ?</string>
    <string name="signup"> Signup</string>
    <string name="add_your_email_address">Add your email address</string>
    <string name="my_email_is">My email is</string>
    <string name="my_password_is">My password is</string>
    <string name="pass">**********</string>
    <string name="finding_instant_n_loans_made_easy">Finding instant\n loans made easy.</string>
    <string name="first_name">First name</string>
    <string name="email_address">Email Address</string>
    <string name="your_email_address">Your email address</string>
    <string name="last_name">Last name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="numberr">+1 - 000 0000</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create account</string>
    <string name="available_loan_providers">Available loan providers</string>
    <string name="edit_profile">Edit profile</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="share_app">Share app</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="help_center">Help center</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="about_app">About app</string>
    <string name="logout">Logout</string>
    <string name="remove_account">Remove account</string>
    <string name="calculate_amount">Calculate Amount</string>
    <string name="tenure">Tenure</string>
    <string name="interest_rate">Interest rate (%)</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="total_interest_due">Total Interest Due</string>
    <string name="total_amount_payable">Total Amount Payable</string>
    <string name="loan_type">Loan Type</string>
    <string name="view_results">View Results</string>
</resources>