<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/img_login_bg" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_170sdp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:src="@drawable/img_login_app" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|bottom"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_15sdp">

            <com.snap.instant.loan.finder.font_view.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/llEmail"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:letterSpacing="0.004"
                android:text="@string/finding_instant_n_loans_made_easy"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_20sdp"
                app:app_font="@string/dm_sans_36pt_700" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/llPassword"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/rounded_button_email"
                android:orientation="vertical"
                android:padding="@dimen/_15sdp">

                <com.snap.instant.loan.finder.font_view.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:letterSpacing="0.004"
                    android:text="@string/my_email_is"
                    android:textColor="@color/colorLightBlack"
                    android:textSize="@dimen/_8sdp"
                    app:app_font="@string/dm_sans_36pt_500" />

                <com.snap.instant.loan.finder.font_view.FontEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@android:color/transparent"
                    android:hint="@string/add_your_email_address"
                    android:inputType="textEmailAddress"
                    android:letterSpacing="0.001"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    android:textSize="@dimen/_10sdp"
                    app:app_font="@string/dm_sans_36pt_500" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <RelativeLayout
                android:id="@+id/llPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btnLogin"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/rounded_button_email"
                android:padding="@dimen/_15sdp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.snap.instant.loan.finder.font_view.FontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:letterSpacing="0.004"
                        android:text="@string/my_password_is"
                        android:textColor="@color/colorLightBlack"
                        android:textSize="@dimen/_8sdp"
                        app:app_font="@string/dm_sans_36pt_500" />

                    <com.snap.instant.loan.finder.font_view.FontEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@android:color/transparent"
                        android:hint="@string/pass"
                        android:inputType="textWebPassword"
                        android:letterSpacing="0.001"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorBlack"
                        android:textSize="@dimen/_10sdp"
                        app:app_font="@string/dm_sans_36pt_500" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/img_password_view" />

            </RelativeLayout>

            <com.snap.instant.loan.finder.font_view.FontButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/llAccount"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/rounded_button"
                android:letterSpacing="0.0125"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:app_font="@string/dm_sans_36pt_600" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/txtForgotPassword"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center">

                <com.snap.instant.loan.finder.font_view.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:letterSpacing="0.004"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/colorLightBlack"
                    android:textSize="@dimen/_12sdp"
                    app:app_font="@string/dm_sans_36pt_500" />

                <com.snap.instant.loan.finder.font_view.FontTextView
                    android:id="@+id/txtSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:letterSpacing="0.004"
                    android:text="@string/signup"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_12sdp"
                    app:app_font="@string/dm_sans_36pt_700" />
            </androidx.appcompat.widget.LinearLayoutCompat>


            <com.snap.instant.loan.finder.font_view.FontTextView
                android:id="@+id/txtForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:letterSpacing="0.004"
                android:text="@string/forgot_password"
                android:textColor="@color/colorLightBlack"
                android:textSize="@dimen/_12sdp"
                app:app_font="@string/dm_sans_36pt_500" />
        </LinearLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>